--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ pin_memory = true
 epochs = 120
 save_checkpoint_interval = 1
 clip_grad_norm_value = 3.0
-exp_path = '/home/aec/SEtrain/exp/exp'
-resume = true
+exp_path = '/root/aec/SEtrain/exp/exp'
+resume = false
 resume_datetime = '2023-12-06-21h55m'
 resume_step = 15
