--- a/config.toml
+++ b/config.toml
@@ -26,8 +26,8 @@ num_tot = 0
 wav_len = 0
 
 [train_dataloader]
-batch_size = 1
-num_workers = 0
+batch_size = 5
+num_workers = 2
 drop_last = true
 pin_memory = true
 
@@ -51,6 +51,6 @@ epochs = 120
 save_checkpoint_interval = 1
 clip_grad_norm_value = 3.0
 exp_path = '/root/aec/SEtrain/exp/exp'
-resume = true
+resume = false
 resume_datetime = '2023-12-08-18h48m'
 resume_step = 15
